Added images to home page

--- a/index.html
+++ b/index.html
@@ -19,11 +19,15 @@
       </ul>
     </nav>
 
+    <div class="top">
+    </div>
+
     <section class="quotes">
       <ul>
         <li>
           <blockquote>Brandy excelled in a newly created [position] and filled a gap...Her determination, tenacity, and attention to detail helped build a new team and kept all projects, large and small, on track. [She's] champion in the face of uncertainty and change.</blockquote>
         </li>
+
         <li>
           <blockquote>[Brandy] can contribute a focus on problem solving [and] an ease when working with numbers....I have only the highest regard for [her] integrity and work...I have no doubt that she will excel in whichever milieu she chooses to work.</blockquote>
         </li>
@@ -32,6 +36,9 @@
         </li>
       </ul>
     </section>
+
+    <div class="bottom">
+    </div>
 
     <section class="footer">
       <ul>
