--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
     <section class="projects">
       <ul>
         <li>
-          <img src="images/Hotel.jpg"/>
+          <img src="images/Hotel.jpg" alt="Hotel">
           <strong>Hotel</strong>
           <p>
             Hotel is the functionality for a booking program that would allow a hotel manager to process incoming reservations and reserve blocks of rooms. I created this program to explore object oriented design and using inheritance.
@@ -30,7 +30,7 @@
           <a href="https://github.com/brandyaustinseattle/hotel">Learn More</a>
         </li>
         <li>
-          <img src="images/Scrabble.jpg"/>
+          <img src="images/Scrabble.jpg" alt="Scrabble">
           <strong>Scrabble</strong>
           <p>
             Scrabble is the functionality for a limited version of the classic game. It makes it possible to track tile usage and calculate points. My partner and I created this program to practice managing relationships between classes.
@@ -38,7 +38,7 @@
           <a href="https://github.com/Ari-1/Scrabble">Learn More</a>
         </li>
         <li>
-          <img src="images/RideShare.jpg"/>
+          <img src="images/RideShare.jpg" alt="RideShare">
           <strong>Ride Share</strong>
           <p>
             Ride Share is the functionality for a ride share program that would allow a dispatcher to manager drivers, passengers, and trips. I created this program to learn more about composition and helper methods when working with multiple classes.
