Images added to most pages

--- a/about.html
+++ b/about.html
@@ -19,6 +19,8 @@
       </ul>
     </nav>
 
+    <div class="top"></div>
+
     <section class="about">
       <section class="backgroundone">
         <p id="one">
@@ -32,6 +34,8 @@
         </p>
       </section>
     </section>
+
+    <div class="bottom"></div>
 
     <section class="footer">
       <ul>
