--- a/portfolio.html
+++ b/portfolio.html
@@ -19,6 +19,8 @@
       </ul>
     </nav>
 
+    <div class="top"></div>
+
     <section class="projects">
       <ul>
         <li>
@@ -47,6 +49,8 @@
         </li>
       </ul>
     </section>
+
+    <div class="bottom"></div>
 
     <section class="footer">
       <ul>
