--- a/recap.html
+++ b/recap.html
@@ -19,6 +19,8 @@
       </ul>
     </nav>
 
+    <div class="top"></div>
+
     <div class="recap">
         <div class="vertical"><div class="month">February</div>Left my career in marketing to start a new adventure! Completed my first day of class and met the instructors and other students.</div>
         <div class="big"><div class="month">March</div>Learned about object oriented design. Accomplished my first major projects using inheritance - a hotel booking program and a plant encyclopedia both ran in the command line.</div>
@@ -33,6 +35,8 @@
         <div class="horizontal"><div class="month">December</div>Nam a laoreet, massa odio, eleifend nunc. Eu vestibulum. Vulputate sollicitudin, integer consequuntur. Euismod nullam, nam mollis.</div>
         <div class="vertical"><div class="month">January</div>lit ipsum pede. Nunc tempor at, sagittis vivamus molestie.</div>
     </div>
+
+    <div class="bottom"></div>
 
     <section class="footer">
       <ul>
