--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
       </ul>
     </nav>
 
-    <div class="top">
-    </div>
+    <div class="top"></div>
 
     <section class="quotes">
       <ul>
@@ -37,8 +36,7 @@
       </ul>
     </section>
 
-    <div class="bottom">
-    </div>
+    <div class="bottom"></div>
 
     <section class="footer">
       <ul>
