All pictures added

--- a/resume.html
+++ b/resume.html
@@ -19,6 +19,8 @@
       </ul>
     </nav>
 
+    <div class="top"></div>
+
     <section class="top">
       <section class="skills">
         <h1>Primary competentcies:</h1>
@@ -93,6 +95,8 @@
         <li>Wrote SQL queries to pull data including open rate, click rate, page views, and conversion totals</li>
       </ul>
     </section>
+
+    <div class="bottom"></div>
 
     <section class="footer">
       <ul>
