Edited links to open in separate page

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
           <p>
             Hotel is the functionality for a booking program that would allow a hotel manager to process incoming reservations and reserve blocks of rooms. I created this program to explore object oriented design and using inheritance.
           </p>
-          <a href="https://github.com/brandyaustinseattle/hotel">Learn More</a>
+          <a href="https://github.com/brandyaustinseattle/hotel" target="_blank">Learn More</a>
         </li>
         <li>
           <img src="images/Scrabble.jpg" alt="Scrabble">
@@ -37,7 +37,7 @@
           <p>
             Scrabble is the functionality for a limited version of the classic game. It makes it possible to track tile usage and calculate points. My partner and I created this program to practice managing relationships between classes.
           </p>
-          <a href="https://github.com/Ari-1/Scrabble">Learn More</a>
+          <a href="https://github.com/Ari-1/Scrabble" target="_blank">Learn More</a>
         </li>
         <li>
           <img src="images/RideShare.jpg" alt="RideShare">
@@ -45,7 +45,7 @@
           <p>
             Ride Share is the functionality for a ride share program that would allow a dispatcher to manager drivers, passengers, and trips. I created this program to learn more about composition and helper methods when working with multiple classes.
           </p>
-          <a href="https://github.com/brandyaustinseattle/oo-ride-share">Learn More</a>
+          <a href="https://github.com/brandyaustinseattle/oo-ride-share" target="_blank">Learn More</a>
         </li>
       </ul>
     </section>
