Added picture at bottom

--- a/recap.html
+++ b/recap.html
@@ -38,6 +38,8 @@
 
     <div class="bottom"></div>
 
+    <div class="end"></div>
+
     <section class="footer">
       <ul>
         <li id="name">Brandy Austin</li>
