--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 
     <div class="bottom"></div>
 
+    <div class="end"></div>
+
     <section class="footer">
       <ul>
         <li id="name">Brandy Austin</li>
